
[metadata]
name = stylo_metrix
version = 0.0.0
author = ZILiAT-NASK
author_email = anna.zawadzka@nask.pl
description = StyloMetrix tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZILiAT-NASK/StyloMetrix
;project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = stylo_metrix
packages = find:
python_requires = >=3.8

[options.packages.find]
where = stylo_metrix