; Copyright (C) 2022  NASK PIB
;
; This program is free software: you can redistribute it and/or modify
; it under the terms of the GNU General Public License as published by
; the Free Software Foundation, either version 3 of the License, or
; (at your option) any later version.
;
; This program is distributed in the hope that it will be useful,
; but WITHOUT ANY WARRANTY; without even the implied warranty of
; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
; GNU General Public License for more details.
;
; You should have received a copy of the GNU General Public License
; along with this program.  If not, see <https://www.gnu.org/licenses/>.


[metadata]
name = stylo_metrix
version = 0.1.0
author = ZILiAT-NASK, Adam Nowakowski
author_email = adam.nowakowski@nask.pl
description = StyloMetrix tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZILiAT-NASK/StyloMetrix
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    setuptools>=49.2.0
    numpy>=1.17.0
    pandas>=1.0.5
    scikit-learn
    spacy
    spacy-syllables==3.0.1
    vaderSentiment
    spacy-transformers
    morfeusz2
    pexpect

[options.packages.find]
where = src