; Copyright (C) 2024  NASK PIB
;
; This program is free software: you can redistribute it and/or modify
; it under the terms of the GNU General Public License as published by
; the Free Software Foundation, either version 3 of the License, or
; (at your option) any later version.
;
; This program is distributed in the hope that it will be useful,
; but WITHOUT ANY WARRANTY; without even the implied warranty of
; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
; GNU General Public License for more details.
;
; You should have received a copy of the GNU General Public License
; along with this program.  If not, see <https://www.gnu.org/licenses/>.


[metadata]
name = stylo_metrix
version = {{VERSION_PLACEHOLDER}}
author = ZILiAT-NASK
author_email = ziliat@nask.pl
description = StyloMetrix tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZILiAT-NASK/StyloMetrix
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = src/stylo_metrix/metrics/en/data/hurtlex/*.txt